CMAKE_MINIMUM_REQUIRED ( VERSION 2.8.11 )

PROJECT ( OpenVDB_3_2_0 )

FIND_PACKAGE ( GLFW3 REQUIRED )
INCLUDE_DIRECTORIES ( ${GLFW3_INCLUDE_DIR} )

ADD_SUBDIRECTORY ( openvdb )
IF ( BUILD_HOUDINI_TOOLKIT )
  ADD_SUBDIRECTORY ( openvdb_houdini )
ENDIF ()
IF ( BUILD_MAYA_TOOLKIT )
  ADD_SUBDIRECTORY ( openvdb_maya )
ENDIF ()
